2022-02-04  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20220204
	Merge with NetBSD make, pick up
	o use unsigned consistently for line numbers, avoid the need for %z
	o parse.c: do not step off end of input in Parse_IsVar
	when checking for target local variable assignments

2022-02-02  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20220202
	Merge with NetBSD make, pick up
	o remove redundant declaration of HashIter_Init
	o make DEBUG0 simpler

2022-01-30  Simon J Gerraty  <sjg@beast.crufty.net>

	* cast gn->lineno to avoid %z

	* VERSION (_MAKE_VERSION): 20220130
	Merge with NetBSD make, pick up
	o more unit tests
	o make GNode lineno unsigned to please lint
	o print location of recursive variable references in commands
	o print "stack trace" (makefile includes) on fatal errors
	o make.1: refine documentation for target local assignments

2022-01-28  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20220128
	Merge with NetBSD make, pick up
	o inline functions called only once
	o for.c: clean up AddEscape for building the body of a .for loop
	o hash.c: merge duplicate code for finding an entry in a hash table
	replace HashEntry_KeyEquals with strncmp
	o make.1: document quirks of target local variable assignments.
	o parse.c: cleanup white-space

2022-01-26  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20220126
	Merge with NetBSD make, pick up
	o allow setting target local variables
	o more unit tests
	o add missing newline after "cannot continue" message
	o meta.c: clean up eat_dots
	o parse.c: fix filename in warning about duplicate script
	o var.c: when expanding nested variables, check simple things first

2022-01-16  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20220116
	Merge with NetBSD make, pick up
	o fix for unit-tests/varname-makeflags on non-BSD systems
	o use Var_Exists rather than Var_Value where appropriate