@@ -7,7 +7,7 @@ SRCTOP?= ${.CURDIR:H:H}
 
 # things set by configure
 
-_MAKE_VERSION?=20220204
+_MAKE_VERSION?=20220208
 
 prefix?= /usr
 srcdir= ${SRCTOP}/contrib/bmake
